--- a/style.css
+++ b/style.css
@@ -48,7 +48,6 @@ body {
 .main-container {
   min-width: 329px;
   max-width: 452px;
-  padding-bottom: 30px;
   border-radius: 23px;
   overflow: hidden;
   background-color: var(--white);
@@ -146,12 +145,14 @@ section.content {
 .content__cancel-order {
   margin-top: 25px;
   text-align: center;
+  padding-bottom: 33px;
 }
 .content__cancel-order a {
   color: var(--desaturatedBlue);
   font-size: 1.4rem;
   font-weight: 700;
   letter-spacing: 0.05em;
+  text-decoration: none;
   margin-top: 25px;
   cursor: pointer;
   transition: 0.2s;
@@ -186,5 +187,8 @@ section.content {
     background-image: url("./assets/images/pattern-background-desktop.svg");
     background-size: auto;
     background-position-y: -40px;
+  }
+  .content__cancel-order {
+    padding-bottom: 48px;
   }
 }
